[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "empire-leads"
version = "0.1.0"
description = "Zero-Chrome, multi-source B2B lead discovery engine. Uses Overpass API (OSM), public records, and lightweight HTTP enrichment — no Selenium, no API keys."
authors = [{name = "Empire OS", email = "founder@empire-ai.co.uk"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/empire-ai-co-uk/empire-leads"
Repository = "https://github.com/empire-ai-co-uk/empire-leads.git"

[project.scripts]
empire-leads = "empire_leads.cli:main"

[tool.setuptools.packages.find]
include = ["empire_leads*"]
